Fix: added proper covers to the gallery and animations on the dropdown component

--- a/src/pages/home/components/card/Card.css
+++ b/src/pages/home/components/card/Card.css
@@ -1,8 +1,8 @@
 .card__title {
   background: linear-gradient(
     180deg,
-    rgba(255, 255, 255, 0) 0%,
-    rgba(0, 0, 0, 0.4) 100%
+    rgba(255, 255, 255, 0) 40%,
+    rgba(0, 0, 0, 0.7) 100%
   );
 
   color: white;
@@ -14,15 +14,22 @@
   line-height: 25px;
   width: 100%;
   height: 100%;
+  position: absolute;
 }
 
 .card {
+  margin: 0;
   border-radius: 10px;
   overflow: hidden;
-  background-color: rgba(255, 96, 96, 1);
   aspect-ratio: 1;
+  position: relative;
 }
-
+.card__cover {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
 .card__loader {
   background-color: rgba(128, 128, 128, 0.267);
 }
